# obsidian-text-extractor

./: .gitignore  .prettierrc.js  BRAT_USAGE_GUIDE.md  CHANGELOG.md  README.md  VLM_YOLO_INTEGRATION.md  manifest.json  version-bump.mjs  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
lib/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.json
lib/src/: cache.ts  database.ts  globals.ts  index.ts  lib.rs  ocr-manager.ts  pdf-manager.ts  pdf-worker.ts  types.ts  utils.test.ts  utils.ts
lib/src/ocr/: ocr-langs.ts  ocr-mac.ts  ocr-manager.ts
lib/src/office/: office-manager.ts  office-worker.ts
lib/src/pdf/: pdf-manager.ts  pdf-worker.ts
lib/src/vlm/: vlm-manager.ts
lib/src/yolo/: yolo-manager.ts
lib/typings/: types-obsidian.d.ts
plugin/: .editorconfig  .gitignore  .prettierrc.js  README.md  esbuild.config.mjs  globals.d.ts  package.json  pnpm-lock.yaml  tsconfig.json
plugin/src/: main.ts  settings.ts  utils.ts
plugin/src/components/: LangSelector.svelte
plugin/typings/: types-obsidian.d.ts
