[package]
name = "obsidian-text-extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.49"
pdf-extract = "0.10.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
lto = true
opt-level = 'z'
